Fix alignment

--- a/app/components/cards/cards.module.scss
+++ b/app/components/cards/cards.module.scss
@@ -29,7 +29,7 @@
   padding: 75px 0;
 
   @include medium {
-    grid-template-columns: 33% 33%;
+    grid-template-columns: 35% 35%;
   }
 }
 
