--- a/app/components/column/column.module.scss
+++ b/app/components/column/column.module.scss
@@ -17,7 +17,7 @@
 }
 
 .fullWidth {
-  max-width: 800px;
+  max-width: 720px;
   margin: 0 auto;
   text-align: center;
 }
