--- a/app/components/footer/footer.module.scss
+++ b/app/components/footer/footer.module.scss
@@ -13,6 +13,7 @@
   align-items: center;
   max-width: var(--global-width);
   margin: 0 auto;
+  padding: 0 15px;
   text-align: center;
 
   @include medium {
@@ -39,7 +40,7 @@
   gap: var(--spacing-xxl);
 
   @include medium {
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 47% 47%;
   }
 }
 
