--- a/app/components/hero/hero.module.scss
+++ b/app/components/hero/hero.module.scss
@@ -25,7 +25,7 @@
   margin: var(--spacing-xl) 0 50px;
 
   @include medium {
-    grid-template-columns: 30% 30% 30%;
+    grid-template-columns: 32% 32% 32%;
     margin: 100px 0 50px;
   }
 }
