--- a/app/components/progress/progress.module.scss
+++ b/app/components/progress/progress.module.scss
@@ -1,5 +1,5 @@
 .progress {
-  max-width: 600px;
+  max-width: 720px;
   margin: 0 auto;
   padding: 75px 0;
 }
